# t1x-server

./: .gitignore  CMakeLists.txt  README.md  t1x.cfg
docs/: pyvenv.cfg
docs/source/: conf.py  index.rst
docs/source/pages/: building.rst
docs/source/pages/usage/: cvars.rst  index.rst  installation.rst  sv_cmds.rst
src/: functions.h  iw1x.cpp  iw1x.h  jump.cpp  jump.h  pch.h  shared.h  t1x.cpp  t1x.h  t1x_old.cpp  types.h
src/gsc/: gsc.cpp  gsc.h  gsc_curl.cpp  gsc_player.cpp  gsc_utils.cpp  gsc_weapons.cpp
symbols/: coduo_lnxded  coduo_lnxded.c
